--- a/index.html
+++ b/index.html
@@ -5,24 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Jersey</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
 <h1 class="mainTitle">Our Visit in New Jersey</h1>
 
-<div class="grid-container">
-  <div class="item1">The Capital<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, molestias?</p></div>
-  <div class="item2"><img src="./imgs/philadeplhia.jpg" alt=""></div>
-  <div class="item3"><img src="./imgs//atlantic city casino.jpg" alt=""></div>  
-  <div class="item4">Full of fun<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, consectetur.</p></div>
-  <div class="item5">Picnic Day<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ullam.</p></div>
-  <div class="item6"><img src="./imgs/liberty state park.jpg" alt=""></div>
-  <div class="item7"><img src="./imgs/eagles.jpg" alt=""></div>
-  <div class="item8">Living a local experience<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, odio.</p></div>  
+
+<div class="container text-center">
+  <div class="row">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, magni!</p>
+  </div>
+  <div class="row">
+    <div class="col"><iframe width="500" height="320" src="https://www.youtube.com/watch?v=2lrYQMPCQk0" frameborder="0"></iframe></div>
+  </div>
+  <div class="row">
+    <div class="col-8"><img src="/imgs/philadeplhia.jpg" alt=""></div>
+    <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+  </div>
+  <div class="row">
+    <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-8"><img src="/imgs/atlantic city casino.jpg" alt=""></div>
+  </div>
+  <div class="row">
+    <div class="col-8"><img src="/imgs/liberty state park.jpg" alt=""></div>
+    <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+  </div>
+  <div class="row">
+    <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-8"><img src="/imgs/eagles.jpg" alt=""></div>
+  </div>
 </div>
-<footer>
+<footer class="text-center">
   <p>You can refer to line numbers when placing grid items.</p>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
