--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
     <div class="col"><iframe width="500" height="320" src="https://www.youtube.com/watch?v=2lrYQMPCQk0" frameborder="0"></iframe></div>
   </div>
   <div class="row">
-    <div class="col-8"><img src="/imgs/philadeplhia.jpg" alt=""></div>
-    <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-sm-8"><img src="./imgs/philadeplhia.jpg" alt=""></div>
+    <div class="col-sm-4"><h2>The Capital</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
   </div>
   <div class="row">
-    <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
-    <div class="col-8"><img src="/imgs/atlantic city casino.jpg" alt=""></div>
+    <div class="col-sm-4"><h2>Have fun close to the beach</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-sm-8"><img src="./imgs/atlantic city casino.jpg" alt=""></div>
   </div>
   <div class="row">
-    <div class="col-8"><img src="/imgs/liberty state park.jpg" alt=""></div>
-    <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-sm-8"><img src="./imgs/liberty state park.jpg" alt=""></div>
+    <div class="col-sm-4"><h2>Picnic Day</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
   </div>
   <div class="row">
-    <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
-    <div class="col-8"><img src="/imgs/eagles.jpg" alt=""></div>
+    <div class="col-sm-4"><h2>Living a local experience</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-sm-8"><img src="./imgs/eagles.jpg" alt=""></div>
   </div>
 </div>
 <footer class="text-center">
