--- a/index.html
+++ b/index.html
@@ -11,33 +11,31 @@
 <body>
 
 <h1 class="mainTitle">Our Visit in New Jersey</h1>
-
-
 <div class="container text-center">
   <div class="row">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, magni!</p>
   </div>
   <div class="row">
-    <div class="col"><iframe width="500" height="320" src="https://www.youtube.com/watch?v=2lrYQMPCQk0" frameborder="0"></iframe></div>
+    <div class="col-sm-12"><iframe width="700" height="400" src="https://www.youtube.com/embed/2lrYQMPCQk0?controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
   </div>
   <div class="row">
     <div class="col-sm-8"><img src="./imgs/philadeplhia.jpg" alt=""></div>
-    <div class="col-sm-4"><h2>The Capital</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-sm-4 my-5"><h2>The Capital</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
   </div>
   <div class="row">
-    <div class="col-sm-4"><h2>Have fun close to the beach</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-sm-4 my-5"><h2>Have fun close to the beach</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
     <div class="col-sm-8"><img src="./imgs/atlantic city casino.jpg" alt=""></div>
   </div>
   <div class="row">
     <div class="col-sm-8"><img src="./imgs/liberty state park.jpg" alt=""></div>
-    <div class="col-sm-4"><h2>Picnic Day</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-sm-4 my-5"><h2>Picnic Day</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
   </div>
   <div class="row">
-    <div class="col-sm-4"><h2>Living a local experience</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
+    <div class="col-sm-4 my-5"><h2>Living a local experience</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
     <div class="col-sm-8"><img src="./imgs/eagles.jpg" alt=""></div>
   </div>
 </div>
-<footer class="text-center">
+<footer class="text-center my-5">
   <p>You can refer to line numbers when placing grid items.</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
