--- a/index.html
+++ b/index.html
@@ -11,30 +11,43 @@
 <body>
 
 <h1 class="mainTitle">Our Visit in New Jersey</h1>
+
 <div class="container text-center">
   <div class="row">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, magni!</p>
+    <p class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, magni!</p>
   </div>
+
+  <!-- video youtube -->
   <div class="row">
-    <div class="col-sm-12"><iframe width="700" height="400" src="https://www.youtube.com/embed/2lrYQMPCQk0?controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-  </div>
-  <div class="row">
+    <div class="col-sm-12"><iframe width="500" height="300" src="https://www.youtube.com/embed/2lrYQMPCQk0?controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+   </div>
+
+   <!-- Comienzo de fotos con descripcion -->
+
+  <div class="row myFlex">
     <div class="col-sm-8"><img src="./imgs/philadeplhia.jpg" alt=""></div>
     <div class="col-sm-4 my-5"><h2>The Capital</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
   </div>
-  <div class="row">
+
+  <div class="row myFlex">
     <div class="col-sm-4 my-5"><h2>Have fun close to the beach</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
     <div class="col-sm-8"><img src="./imgs/atlantic city casino.jpg" alt=""></div>
   </div>
-  <div class="row">
+
+  <div class="row myFlex">
     <div class="col-sm-8"><img src="./imgs/liberty state park.jpg" alt=""></div>
     <div class="col-sm-4 my-5"><h2>Picnic Day</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
   </div>
-  <div class="row">
+
+  <div class="row myFlex">
     <div class="col-sm-4 my-5"><h2>Living a local experience</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis repudiandae molestiae sunt incidunt tempora nesciunt perspiciatis omnis recusandae culpa?</div>
     <div class="col-sm-8"><img src="./imgs/eagles.jpg" alt=""></div>
   </div>
+
 </div>
+
+<!-- Footer -->
+
 <footer class="text-center my-5">
   <p>You can refer to line numbers when placing grid items.</p>
 </footer>
